--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		script(src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js")
-		script("src="http://d3js.org/d3.v3.min.js)
+		script(src="http://d3js.org/d3.v3.min.js")
 		script(src="http://d3js.org/topojson.v0.min.js")
 		script(src="/socket.io/socket.io.js")
 	#logo
