--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,15 +4,40 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
 		script(src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js")
+		script(src="/javascripts/bootstrap.min.js")
 		script(src="http://d3js.org/d3.v3.min.js")
 		script(src="http://d3js.org/topojson.v0.min.js")
 		script(src="/socket.io/socket.io.js")
-	#logo
-		img(src='/images/tweetmaplogo.png')
-	#map
-		script(type='text/javascript', src="/javascripts/map2tweet.js")
-	#twitter-feed
-	
-	footer
-		a(href='http://www.nickmolina.me') Developed by Nick Molina
+		script
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-39279410-2']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			var ga = document.createElement('script');
+			ga.type = 'text/javascript';
+			ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0];
+			s.parentNode.insertBefore(ga, s);})();
+	#wrap
+		.header
+		.container
+			.push-left
+				#logo
+					img(src='/images/tweetmapv3.png')
+			.push-right
+				#map
+					script(type='text/javascript', src="/javascripts/map2tweet.js")
+			#twitter-feed
+			.rightfiller
+			h1 
+				#coords
+		#push
+
+	#footer
+		.container
+			p(class = "muted credit") Developed by 
+				a(href='http://www.nickmolina.me') Nick Molina
